# alien-daw-prototype

./: Cargo.toml
src/: backend.rs  main.rs  sound.rs  synth.rs
src/sound/: mod.rs  synth.rs
