[package]
name = "alien-daw-prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-channel = "2.2.0"
cpal = "0.15.2"
either = "1.10.0"
enum_dispatch = "0.3.12"
parking_lot = "0.12.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.19.1"
winit = "0.29.10"
